# ThetaVault

./: .gitignore  Cargo.toml  Makefile  README.md
scripts/: backfill_import_log.py  fix_import_20260303.py  import_schwab_rust.py
src/: actions.rs  app.rs  calculations.rs  lib.rs  main.rs  models.rs  storage.rs  ui.rs  yahoo.rs
tauri/: index.html  package-lock.json  package.json
tauri/src/: App.svelte
tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
tauri/src/lib/: PayoffChart.svelte  PerformanceCharts.svelte  StrategyGuidePanel.svelte  Terminal.svelte
