[package]
name = "theta-vault-tauri"
version = "0.1.0"
description = "ThetaVault — Tauri wrapper with modern payoff charts"
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
which = "7"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
